cbits/Bullet.h

void btCollisionObject_setWorldTransform(void *c,float* p0); //method: setWorldTransform void ( ::btCollisionObject::* )( ::btTransform const & ) 
int btCollisionObject_getCompanionId(void *c); //method: getCompanionId int ( ::btCollisionObject::* )(  ) const
void btCollisionObject_internalSetExtensionPointer(void *c,void* p0); //method: internalSetExtensionPointer void ( ::btCollisionObject::* )( void * ) 
void btCollisionObject_setContactProcessingThreshold(void *c,float p0); //method: setContactProcessingThreshold void ( ::btCollisionObject::* )( ::btScalar ) 
void btCollisionObject_setInterpolationWorldTransform(void *c,float* p0); //method: setInterpolationWorldTransform void ( ::btCollisionObject::* )( ::btTransform const & ) 
void btCollisionObject_getInterpolationLinearVelocity(void *c,float* ret); //method: getInterpolationLinearVelocity ::btVector3 const & ( ::btCollisionObject::* )(  ) const
int btCollisionObject_mergesSimulationIslands(void *c); //method: mergesSimulationIslands bool ( ::btCollisionObject::* )(  ) const
void btCollisionObject_setCollisionShape(void *c,void* p0); //method: setCollisionShape void ( ::btCollisionObject::* )( ::btCollisionShape * ) 
void btCollisionObject_setCcdMotionThreshold(void *c,float p0); //method: setCcdMotionThreshold void ( ::btCollisionObject::* )( ::btScalar ) 
int btCollisionObject_getIslandTag(void *c); //method: getIslandTag int ( ::btCollisionObject::* )(  ) const
int btCollisionObject_calculateSerializeBufferSize(void *c); //method: calculateSerializeBufferSize int ( ::btCollisionObject::* )(  ) const
float btCollisionObject_getCcdMotionThreshold(void *c); //method: getCcdMotionThreshold ::btScalar ( ::btCollisionObject::* )(  ) const
void btCollisionObject_setUserPointer(void *c,void* p0); //method: setUserPointer void ( ::btCollisionObject::* )( void * ) 
int btCollisionObject_checkCollideWith(void *c,void* p0); //method: checkCollideWith bool ( ::btCollisionObject::* )( ::btCollisionObject * ) 
void btCollisionObject_getAnisotropicFriction(void *c,float* ret); //method: getAnisotropicFriction ::btVector3 const & ( ::btCollisionObject::* )(  ) const
void btCollisionObject_getInterpolationAngularVelocity(void *c,float* ret); //method: getInterpolationAngularVelocity ::btVector3 const & ( ::btCollisionObject::* )(  ) const
void btCollisionObject_forceActivationState(void *c,int p0); //method: forceActivationState void ( ::btCollisionObject::* )( int ) 
int btCollisionObject_isStaticObject(void *c); //method: isStaticObject bool ( ::btCollisionObject::* )(  ) const
void btCollisionObject_setFriction(void *c,float p0); //method: setFriction void ( ::btCollisionObject::* )( ::btScalar ) 
void btCollisionObject_getInterpolationWorldTransform(void *c,float* ret); //method: getInterpolationWorldTransform ::btTransform const & ( ::btCollisionObject::* )(  ) const
void btCollisionObject_getInterpolationWorldTransform0(void *c,float* ret); //method: getInterpolationWorldTransform ::btTransform const & ( ::btCollisionObject::* )(  ) const
void btCollisionObject_getInterpolationWorldTransform1(void *c,float* ret); //method: getInterpolationWorldTransform ::btTransform & ( ::btCollisionObject::* )(  ) 
void btCollisionObject_setIslandTag(void *c,int p0); //method: setIslandTag void ( ::btCollisionObject::* )( int ) 
void btCollisionObject_setHitFraction(void *c,float p0); //method: setHitFraction void ( ::btCollisionObject::* )( ::btScalar ) 
void btCollisionObject_serializeSingleObject(void *c,void* p0); //method: serializeSingleObject void ( ::btCollisionObject::* )( ::btSerializer * ) const