Physics/Bullet/Raw/BulletCollision/CollisionDispatch.chs

{#fun btCollisionObject_setWorldTransform as btCollisionObject_setWorldTransform'    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ worldTrans
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#362>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_getCompanionId as btCollisionObject_getCompanionId    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#235>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_internalSetExtensionPointer as btCollisionObject_internalSetExtensionPointer    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, withVoidPtr* `VoidPtr'  -- ^ pointer
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#162>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setContactProcessingThreshold as btCollisionObject_setContactProcessingThreshold    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ contactProcessingThreshold
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#327>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setInterpolationWorldTransform as btCollisionObject_setInterpolationWorldTransform    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, withTransform* `Transform'  peekTransform* -- ^ trans
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#327>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setInterpolationWorldTransform as btCollisionObject_setInterpolationWorldTransform'    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ trans
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#342>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_getInterpolationLinearVelocity as btCollisionObject_getInterpolationLinearVelocity    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#140>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_mergesSimulationIslands as btCollisionObject_mergesSimulationIslands    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#194>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setCollisionShape as btCollisionObject_setCollisionShape    `( BtCollisionObjectClass bc , BtCollisionShapeClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ collisionShape
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#418>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setCcdMotionThreshold as btCollisionObject_setCcdMotionThreshold    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ ccdMotionThreshold
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#352>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_getIslandTag as btCollisionObject_getIslandTag    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#517>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_calculateSerializeBufferSize as btCollisionObject_calculateSerializeBufferSize    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#405>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_getCcdMotionThreshold as btCollisionObject_getCcdMotionThreshold    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#430>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setUserPointer as btCollisionObject_setUserPointer    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, withVoidPtr* `VoidPtr'  -- ^ userPointer
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#436>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_checkCollideWith as btCollisionObject_checkCollideWith    `( BtCollisionObjectClass bc , BtCollisionObjectClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ co
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#146>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_getAnisotropicFriction as btCollisionObject_getAnisotropicFriction    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#347>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_getInterpolationAngularVelocity as btCollisionObject_getInterpolationAngularVelocity    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#253>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_forceActivationState as btCollisionObject_forceActivationState    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ newState
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#171>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_isStaticObject as btCollisionObject_isStaticObject    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#270>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setFriction as btCollisionObject_setFriction    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ frict
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#317>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_getInterpolationWorldTransform0 as btCollisionObject_getInterpolationWorldTransform    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#317>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_getInterpolationWorldTransform0 as btCollisionObject_getInterpolationWorldTransform0    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#322>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_getInterpolationWorldTransform1 as btCollisionObject_getInterpolationWorldTransform1    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#357>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setIslandTag as btCollisionObject_setIslandTag    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ tag
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#377>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setHitFraction as btCollisionObject_setHitFraction    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ hitFraction
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#449>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_serializeSingleObject as btCollisionObject_serializeSingleObject    `( BtCollisionObjectClass bc , BtSerializerClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ serializer
 } ->  `()'   #}
